# ContainerBenchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  referenceBenchmarks.json
docker/: Dockerfile  docker-compose.yml  installBenchmark.sh  startDockerContainer.sh
include/: CodeToTest.h  CommunicationData.h  ExampleBenchmark.h  sampleHeader.h
include/Benchmarks/: CommunicationData.h  CommunicationDataConcept.h  ExampleBenchmark.h
include/Benchmarks/DataTypes/: CommsProtocol.pb.h  CommsProtocol.proto
include/DataStructures/: CustomDataStructures.h  Graph.h
include/Socket/: SocketServer.h
scripts/: run_benchmarks.go  run_benchmarks.py
src/: CMakeLists.txt  CodeToTest.cpp  CommunicationData.cpp  ExampleBenchmarks.cpp  main.cpp
src/Benchmarks/: CMakeLists.txt  CommunicationData.cpp  ExampleBenchmarks.cpp  main.cpp
src/Benchmarks/DataTypes/: CMakeLists.txt  CommsProtocol.pb.cc
src/DataStructures/: CMakeLists.txt  main.cpp
src/DataStructures/test/: CMakeLists.txt  GraphTest.cpp  QueueTest.cpp  testMain.cpp
src/Socket/: CMakeLists.txt  SocketServer.cpp  main.cpp
